// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots Storyshots Components/LogRow/AnsiiRow Multi Lines 1`] = `
Array [
  <pre
    className="css-verjje"
    wrap={false}
  >
    <span
      className="css-15xv5ui"
    >
      0
       
      	
    </span>
    [2022/08/30 14:53:58.774] [grip] 2022/08/30 14:53:17 [p=debug]: [commit='536cdcab21b907c87cd14751ad523ad1d8f23d07' operation='github api query' query='536cdcab21b907c87cd14751ad523ad1d8f23d07' repo='evergreen-ci/evergreen' size='-1' status='200 OK']
  </pre>,
  <pre
    className="css-verjje"
    wrap={false}
  >
    <span
      className="css-15xv5ui"
    >
      1
       
      	
    </span>
    [2022/08/30 14:53:58.774] [grip] 2022/08/30 14:53:17 [p=debug]: [message='created build' name='lint' project='mci' project_identifier='' runner='repotracker' version='_536cdcab21b907c87cd14751ad523ad1d8f23d07']
  </pre>,
  <pre
    className="css-verjje"
    wrap={false}
  >
    <span
      className="css-15xv5ui"
    >
      2
       
      	
    </span>
    [2022/08/30 14:53:58.774] [grip] 2022/08/30 14:53:17 [p=debug]: [message='created build' name='osx' project='mci' project_identifier='' runner='repotracker' version='_536cdcab21b907c87cd14751ad523ad1d8f23d07']
  </pre>,
  <pre
    className="css-verjje"
    wrap={false}
  >
    <span
      className="css-15xv5ui"
    >
      3
       
      	
    </span>
    [2022/08/30 14:53:58.774] [grip] 2022/08/30 14:53:17 [p=debug]: [message='created build' name='race-detector' project='mci' project_identifier='' runner='repotracker' version='_536cdcab21b907c87cd14751ad523ad1d8f23d07']
  </pre>,
  <pre
    className="css-verjje"
    wrap={false}
  >
    <span
      className="css-15xv5ui"
    >
      4
       
      	
    </span>
    [2022/08/30 14:53:58.774] [grip] 2022/08/30 14:53:17 [p=debug]: [message='created build' name='ubuntu1604' project='mci' project_identifier='' runner='repotracker' version='_536cdcab21b907c87cd14751ad523ad1d8f23d07']
  </pre>,
  <pre
    className="css-verjje"
    wrap={false}
  >
    <span
      className="css-15xv5ui"
    >
      5
       
      	
    </span>
    [2022/08/30 14:53:58.774] [grip] 2022/08/30 14:53:17 [p=debug]: [message='created build' name='ubuntu1804-arm64' project='mci' project_identifier='' runner='repotracker' version='_536cdcab21b907c87cd14751ad523ad1d8f23d07']
  </pre>,
  <pre
    className="css-verjje"
    wrap={false}
  >
    <span
      className="css-15xv5ui"
    >
      6
       
      	
    </span>
    [2022/08/30 14:53:58.774] [grip] 2022/08/30 14:53:17 [p=debug]: [message='created build' name='windows' project='mci' project_identifier='' runner='repotracker' version='_536cdcab21b907c87cd14751ad523ad1d8f23d07']
  </pre>,
  <pre
    className="css-verjje"
    wrap={false}
  >
    <span
      className="css-15xv5ui"
    >
      7
       
      	
    </span>
    [2022/08/30 14:53:58.774] [grip] 2022/08/30 14:53:17 [p=info]: [hash='536cdcab21b907c87cd14751ad523ad1d8f23d07' message='successfully created version' project='mci' runner='repotracker' version='_536cdcab21b907c87cd14751ad523ad1d8f23d07']
  </pre>,
]
`;

exports[`storyshots Storyshots Components/LogRow/AnsiiRow Single Line 1`] = `
<pre
  className="css-verjje"
  wrap={false}
>
  <span
    className="css-15xv5ui"
  >
    0
     
    	
  </span>
  [2022/08/30 14:53:58.774] [grip] 2022/08/30 14:53:17 [p=debug]: [commit='536cdcab21b907c87cd14751ad523ad1d8f23d07' operation='github api query' query='536cdcab21b907c87cd14751ad523ad1d8f23d07' repo='evergreen-ci/evergreen' size='-1' status='200 OK']
</pre>
`;
